<resources>
    <string name="app_name">CharityProjectMock11</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="help_donate">Hướng dẫn</string>
    <string name="donate">Quyên góp</string>
    <string name="done_donate">Hoạt động cũ</string>
    <string name="detail_donate">Chi tiết từ thiện</string>

    <string name="donate_time">Lượt quyên góp</string>
    <string name="achieve">Đạt được</string>
    <string name="percent">%.2f%&#37;</string>
    <string name="time_remain"> còn %d ngày </string>
    <string name="new_program">Các chương trình mới</string>
    <string name="current_program">Các chương trình đang diễn ra</string>
    <string name="stop">Đã kết thúc</string>
    <string name="stop_program">Các chương trình đã kết thúc</string>
</resources>