<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="donateProgram"
            type="com.vti.charityprojectmock11.model.DonateProgram" />
    </data>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_donate_program"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp">

            <ImageView
                android:id="@+id/img_program"
                imageUrl="@{donateProgram.mainImage}"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/txt_program_name"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:text="@{donateProgram.name}"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_program" />

            <TextView
                android:id="@+id/txt_current_money"
                currentMoneyText="@{donateProgram.currentMoney}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/pb_current_money"
                app:layout_constraintStart_toStartOf="@id/txt_program_name"
                app:layout_constraintTop_toBottomOf="@id/txt_program_name" />

            <TextView
                android:id="@+id/txt_target_money"
                targetMoneyText="@{donateProgram.targetMoney}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/txt_current_money"
                app:layout_constraintEnd_toStartOf="@id/txt_time_remain"
                app:layout_constraintStart_toEndOf="@id/txt_current_money"
                app:layout_constraintTop_toTopOf="@id/txt_current_money" />


            <TextView
                android:id="@+id/txt_time_remain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/background_time_remain"
                android:paddingHorizontal="4dp"
                android:text="@string/stop"
                android:textColor="@color/pink"
                app:layout_constraintBottom_toTopOf="@id/pb_current_money"
                app:layout_constraintEnd_toEndOf="@id/txt_program_name"
                app:layout_constraintTop_toBottomOf="@id/txt_program_name" />

            <ProgressBar
                android:id="@+id/pb_current_money"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                currentMoney="@{donateProgram.currentMoney}"
                targetMoney="@{donateProgram.targetMoney}"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:progressTint="@color/pink"
                app:layout_constraintEnd_toEndOf="@id/txt_program_name"
                app:layout_constraintStart_toStartOf="@id/txt_program_name"
                app:layout_constraintTop_toBottomOf="@id/txt_program_name" />

            <TextView
                android:id="@+id/txt_donate_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/donate_time"
                app:layout_constraintStart_toStartOf="@id/pb_current_money"
                app:layout_constraintTop_toBottomOf="@id/pb_current_money" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/txt_donate_time"
                app:layout_constraintTop_toBottomOf="@id/txt_donate_time" />

            <TextView
                android:id="@+id/txt_achieve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/achieve"
                app:layout_constraintEnd_toStartOf="@id/btn_donate"
                app:layout_constraintStart_toEndOf="@id/txt_donate_time"
                app:layout_constraintTop_toBottomOf="@id/pb_current_money" />

            <TextView
                currentMoney="@{donateProgram.currentMoney}"
                targetMoney="@{donateProgram.targetMoney}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/txt_achieve"
                app:layout_constraintTop_toBottomOf="@id/txt_achieve" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_donate"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:background="@drawable/button_donate_background"
                android:text="@string/donate"
                android:textAllCaps="false"
                android:textColor="@color/pink"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/pb_current_money"
                app:layout_constraintTop_toBottomOf="@id/pb_current_money" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>